syntax = "proto3";

package cart;
option go_package="./cart";

message GetCartReq {
  string user_uuid = 1 [json_name = "user_uuid"];
}

message GetCartResp {
  repeated CartItem cart_items = 1 [json_name = "cart_items"];
}

message CartItem {
  string user_uuid = 1 [json_name = "user_uuid"];
  string product_uuid = 2 [json_name = "product_uuid"];
  int64 quantity = 3 [json_name = "quantity"];
}

message ClearCartReq {
  string user_uuid = 1 [json_name = "user_uuid"];
}

message ClearCartResp {
  string user_uuid = 1 [json_name = "user_uuid"];
}


service Cart {
  // 获取购物车
  rpc GetCart(GetCartReq) returns (GetCartResp);
  // 清空购物车
  rpc ClearCart(ClearCartReq) returns (ClearCartResp);
}